--- a/OnlineShopping/Hosts/UI/OnlineShopping/src/app/feature/orders/components/view-order-cart/view-order-cart.component.html
+++ b/OnlineShopping/Hosts/UI/OnlineShopping/src/app/feature/orders/components/view-order-cart/view-order-cart.component.html
@@ -1,30 +1,31 @@
 <div class="card">
   <div class="card-header bg-secondary">
-    <h3 class="text-light">Products List</h3>
+    <h3 class="text-light">Cart List</h3>
   </div>
   <div class="card-body">
     <div class="mx-4 my-2">
       <div class="form-row border rounded table-responsive-sm">
         <table class="table table-borderless table-hover">
           <tbody>
-            <tr *ngIf="userOrder.oderItems.length == 0">
+            <tr *ngIf="userOrder.orderItems.length == 0">
               <td colspan="3">No data to display</td>
             </tr>
             <tr class="border-bottom"
-              *ngFor="let item of userOrder.oderItems | slice: (page-1) * pageSize : (page-1) * pageSize + pageSize; index as i">
+              *ngFor="let item of userOrder.orderItems | slice: (page-1) * pageSize : (page-1) * pageSize + pageSize; index as i">
               <td>{{item.quantity}} </td>
               <td>{{item.product.name}} </td>
               <td>{{item.product.price}}</td>
             </tr>
           </tbody>
         </table>
-        <ngb-pagination class="pl-1" [collectionSize]="userOrder.oderItems.length" [(page)]="page" [maxSize]="5"
-          *ngIf="userOrder.oderItems.length > pageSize" [pageSize]="pageSize" [rotate]="true" [ellipses]="false"
+        <ngb-pagination class="pl-1" [collectionSize]="userOrder.orderItems.length" [(page)]="page" [maxSize]="5"
+          *ngIf="userOrder.orderItems.length > pageSize" [pageSize]="pageSize" [rotate]="true" [ellipses]="false"
           [boundaryLinks]="true"></ngb-pagination>
       </div>
       <div class="form-row">
         <div class="col text-right">
-
+          <button mat-stroked-button (click)="placeOrder()" class="btn btn-success btn-fixed ml-2">place order</button>
+          <button mat-stroked-button [routerLink]="'/'" class="btn btn-danger btn-fixed ml-2">Cancel</button>
         </div>
       </div>
     </div>
