--- a/OnlineShopping/Hosts/UI/OnlineShopping/src/app/feature/products/components/products-list/products-list.component.html
+++ b/OnlineShopping/Hosts/UI/OnlineShopping/src/app/feature/products/components/products-list/products-list.component.html
@@ -16,18 +16,18 @@
               <td>
                 <div class="row">
                   <div class="col-md-12">
-                    <h6>{{product.name}}</h6>
+                    <h2>{{product.name}}</h2>
                   </div>
                   <div class="col-md-12">
-                    <h2>{{product.description}}</h2>
+                    <h4>{{product.description}}</h4>
                   </div>
                   <div class="col-md-12">
-                    <h3>{{product.price}}</h3>
+                    <h6>{{product.price}}</h6>
                   </div>
                 </div>
               </td>
               <td>
-                <input type="button" name="addToCart" (click)="addToCart(product,1)">
+                <input type="button" name="addToCart" value="add to cart" (click)="addToCart(product,1)">
               </td>
             </tr>
           </tbody>
@@ -38,6 +38,8 @@
       </div>
       <div class="form-row">
         <div class="col text-right">
+          <button mat-stroked-button [routerLink]="'/viewordercart'" class="btn btn-success btn-fixed ml-2">view
+            cart</button>
         </div>
       </div>
     </div>
