--- a/OnlineShopping/Hosts/UI/OnlineShopping/src/app/feature/products/components/products-list/products-list.component.html
+++ b/OnlineShopping/Hosts/UI/OnlineShopping/src/app/feature/products/components/products-list/products-list.component.html
@@ -22,7 +22,7 @@
                     <h4>{{product.description}}</h4>
                   </div>
                   <div class="col-md-12">
-                    <h6>{{product.price}}</h6>
+                    <h6>R {{product.price | number : '1.2-2'}}</h6>
                   </div>
                 </div>
               </td>
