--- a/OnlineShopping/Hosts/UI/OnlineShopping/src/app/feature/user/components/user-register/user-register.component.html
+++ b/OnlineShopping/Hosts/UI/OnlineShopping/src/app/feature/user/components/user-register/user-register.component.html
@@ -35,11 +35,13 @@
               </div>
               <div class="form-group">
                 <label for="confirmPassword">Confirm Password</label>
-                <input type="confirmPassword" formControlName="confirmPassword" class="form-control form-control-sm"
+                <input type="password" formControlName="confirmPassword" class="form-control form-control-sm"
                   [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
                 <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
                   <div *ngIf="f.password.errors.required">confirm Password is required</div>
                 </div>
+                <div *ngIf="f.confirmPassword.value != f.password.value && f.confirmPassword.value != ''"
+                  class="invalid-feedback">Passwords must match</div>
               </div>
               <div class="form-row">
                 <div class="col text-right">
