--- a/OnlineShopping/Hosts/UI/OnlineShopping/src/styles.scss
+++ b/OnlineShopping/Hosts/UI/OnlineShopping/src/styles.scss
@@ -359,3 +359,34 @@ footer {
 .minWidth {
   min-width: 60px;
 }
+
+
+.cart {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+  align-content: space-between;
+}
+
+.price {
+  color: grey;
+  font-size: 22px;
+}
+
+.cart button {
+  border: none;
+  outline: 0;
+  padding: 12px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+.cart button:hover {
+  opacity: 0.7;
+}
